--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "TS sandbox",
   "main": "src/index.js",
   "scripts": {
-    "test": "test"
+    "test": "node_modules/.bin/mocha --require ts-node/register --extensions ts,tsx tests 'tests/**/*.{ts,tsx}'"
   },
   "repository": {
     "type": "git",
