--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "chai": "4.2.0",
     "mocha": "7.1.1",
     "ts-node": "8.8.2",
-    "typescript": "3.8.3"
+    "typescript": "3.8.3",
+    "webpack": "4.42.1",
+    "webpack-cli": "3.3.11"
   }
 }
