--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -35,7 +35,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@master
+      - uses: actions/checkout@master
       - name: install firebase-tools
       - run: npm install -g firebase-tools
       - name: Deploy
