--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+name: Build, Test, Deploy
 
 on:
   push:
@@ -29,12 +29,20 @@ jobs:
     - run: npm test
       env:
         CI: true
+    # uncomment when ready to deploy webpack output
+    #- uses: actions/upload-artifact@master
+    #    with:
+    #      name: dist
+    #      path: dist
   deploy:
     name: Deploy
     needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
+      #- uses: actions/download-artifact@master
+      #  with:
+      #    name: dist
       - uses: w9jds/firebase-action@master
         with:
           args: deploy --only hosting
