--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "TS sandbox",
   "main": "src/index.js",
   "scripts": {
+    "build": "webpack --mode production",
     "test": "node_modules/.bin/mocha --require ts-node/register --extensions ts,tsx tests 'tests/**/*.{ts,tsx}'",
     "frun": "firebase serve --only hosting"
   },
@@ -22,13 +23,21 @@
   },
   "homepage": "https://github.com/alexeysmorkalov/AngularSandBox#readme",
   "devDependencies": {
+    "@babel/core": "7.9.6",
+    "@babel/preset-env": "7.9.6",
+    "@babel/preset-react": "7.9.4",
     "@types/chai": "4.2.11",
     "@types/mocha": "7.0.2",
+    "babel-loader": "8.1.0",
     "chai": "4.2.0",
-    "mocha": "7.1.2",
-    "ts-node": "8.9.1",
-    "typescript": "3.8.3",
+    "mocha": "7.2.0",
+    "ts-node": "8.10.1",
+    "typescript": "3.9.3",
     "webpack": "4.43.0",
     "webpack-cli": "3.3.11"
+  },
+  "dependencies": {
+    "react": "16.13.1",
+    "react-dom": "16.13.1"
   }
 }
