--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tsandbox",
   "version": "1.0.2",
   "description": "TS sandbox",
-  "main": "src/index.js",
+  "private": true,
   "scripts": {
     "build": "webpack --mode production",
     "test": "node_modules/.bin/mocha --require ts-node/register --extensions ts,tsx tests 'tests/**/*.{ts,tsx}'",
@@ -30,6 +30,7 @@
     "@types/mocha": "7.0.2",
     "babel-loader": "8.1.0",
     "chai": "4.2.0",
+    "html-webpack-plugin": "4.3.0",
     "mocha": "7.2.0",
     "ts-node": "8.10.1",
     "typescript": "3.9.3",
