--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@types/mocha": "7.0.2",
     "babel-loader": "8.1.0",
     "chai": "4.2.0",
+    "copy-webpack-plugin": "^6.0.2",
+    "favicons-webpack-plugin": "^3.0.1",
     "html-webpack-plugin": "4.3.0",
     "mocha": "7.2.0",
     "ts-node": "8.10.1",
