--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -10,8 +10,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
 
     strategy:
@@ -25,16 +24,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
-    - run: npm run build --if-present
     - run: npm test
-      env:
-        CI: true
-    # deploy webpack output
-    - name: deploy webpack output
-      uses: actions/upload-artifact@master
-      with:
-        name: dist
-        path: dist
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
@@ -46,8 +36,16 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: npm run build --if-present
-    - uses: w9jds/firebase-action@master
-      with:
-        args: deploy --only hosting
       env:
-        FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+        CI: true
+    # deploy webpack output
+    - name: deploy webpack output
+      uses: actions/upload-artifact@master
+      with:
+        name: dist
+        path: dist
+    - uses: w9jds/firebase-action@master
+        with:
+          args: deploy --only hosting
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
