--- a/package.json
+++ b/package.json
@@ -25,23 +25,25 @@
   },
   "homepage": "https://github.com/alexeysmorkalov/AngularSandBox#readme",
   "devDependencies": {
-    "@babel/core": "7.10.2",
-    "@babel/preset-env": "7.10.2",
+    "@babel/core": "7.10.3",
+    "@babel/preset-env": "7.10.3",
     "@babel/preset-react": "7.10.1",
     "@types/chai": "4.2.11",
     "@types/mocha": "7.0.2",
     "babel-loader": "8.1.0",
     "chai": "4.2.0",
-    "copy-webpack-plugin": "^6.0.2",
-    "favicons-webpack-plugin": "^3.0.1",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "6.0.2",
+    "favicons-webpack-plugin": "3.0.1",
     "html-webpack-plugin": "4.3.0",
     "mocha": "8.0.1",
     "ts-node": "8.10.2",
     "typescript": "3.9.5",
     "webpack": "4.43.0",
-    "webpack-cli": "3.3.11"
+    "webpack-cli": "3.3.12"
   },
   "dependencies": {
+    "fs": "0.0.1-security",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   }
