--- a/package.json
+++ b/package.json
@@ -34,16 +34,21 @@
     "chai": "4.2.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "6.0.3",
+    "css-loader": "^3.6.0",
     "favicons-webpack-plugin": "3.0.1",
     "html-webpack-plugin": "4.3.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "mocha": "8.0.1",
+    "sass": "^1.26.9",
+    "sass-loader": "^9.0.0",
     "ts-node": "8.10.2",
     "typescript": "3.9.5",
-    "webpack": "4.43.0",
+    "webpack": "^4.43.0",
     "webpack-cli": "3.3.12"
   },
   "dependencies": {
     "fs": "0.0.1-security",
+    "materialize-css": "^1.0.0-rc.2",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   }
