--- a/package.json
+++ b/package.json
@@ -25,30 +25,30 @@
   },
   "homepage": "https://github.com/alexeysmorkalov/AngularSandBox#readme",
   "devDependencies": {
-    "@babel/core": "7.10.4",
+    "@babel/core": "7.10.5",
     "@babel/preset-env": "7.10.4",
     "@babel/preset-react": "7.10.4",
     "@types/chai": "4.2.11",
-    "@types/mocha": "7.0.2",
+    "@types/mocha": "8.0.0",
     "babel-loader": "8.1.0",
     "chai": "4.2.0",
-    "clean-webpack-plugin": "^3.0.0",
+    "clean-webpack-plugin": "3.0.0",
     "copy-webpack-plugin": "6.0.3",
-    "css-loader": "^3.6.0",
+    "css-loader": "3.6.0",
     "favicons-webpack-plugin": "3.0.1",
     "html-webpack-plugin": "4.3.0",
-    "mini-css-extract-plugin": "^0.9.0",
+    "mini-css-extract-plugin": "0.9.0",
     "mocha": "8.0.1",
-    "sass": "^1.26.9",
-    "sass-loader": "^9.0.0",
+    "sass": "1.26.10",
+    "sass-loader": "9.0.2",
     "ts-node": "8.10.2",
-    "typescript": "3.9.5",
-    "webpack": "^4.43.0",
+    "typescript": "3.9.7",
+    "webpack": "4.43.0",
     "webpack-cli": "3.3.12"
   },
   "dependencies": {
     "fs": "0.0.1-security",
-    "materialize-css": "^1.0.0-rc.2",
+    "materialize-css": "1.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   }
