--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "html-webpack-plugin": "4.3.0",
     "mini-css-extract-plugin": "0.9.0",
     "mocha": "8.0.1",
+    "mocha-testdata": "^1.2.0",
     "sass": "1.26.10",
     "sass-loader": "9.0.2",
     "ts-node": "8.10.2",
