--- a/package.json
+++ b/package.json
@@ -25,26 +25,27 @@
   },
   "homepage": "https://github.com/alexeysmorkalov/AngularSandBox#readme",
   "devDependencies": {
-    "@babel/core": "7.10.5",
-    "@babel/preset-env": "7.10.4",
+    "@babel/core": "7.11.4",
+    "@babel/preset-env": "7.11.0",
     "@babel/preset-react": "7.10.4",
-    "@types/chai": "4.2.11",
-    "@types/mocha": "8.0.0",
+    "@types/chai": "4.2.12",
+    "@types/mocha": "8.0.3",
     "babel-loader": "8.1.0",
     "chai": "4.2.0",
     "clean-webpack-plugin": "3.0.0",
     "copy-webpack-plugin": "6.0.3",
-    "css-loader": "3.6.0",
-    "favicons-webpack-plugin": "3.0.1",
+    "css-loader": "4.2.1",
+    "favicons-webpack-plugin": "4.2.0",
     "html-webpack-plugin": "4.3.0",
-    "mini-css-extract-plugin": "0.9.0",
-    "mocha": "8.0.1",
+    "mini-css-extract-plugin": "0.10.0",
+    "mocha": "8.1.1",
     "mocha-testdata": "1.2.0",
+    "node-sass": "4.14.1",
     "sass": "1.26.10",
-    "sass-loader": "9.0.2",
+    "sass-loader": "9.0.3",
     "ts-node": "8.10.2",
-    "typescript": "3.9.7",
-    "webpack": "4.43.0",
+    "typescript": "4.0.2",
+    "webpack": "4.44.1",
     "webpack-cli": "3.3.12"
   },
   "dependencies": {
